@@ -21,6 +21,7 @@ ChangeLog
 [-] * Huawei E160 uses encoded USSD requests.
 [+] * Better support for messages on Motorola, thanks to Quintin Hill.
 [-] * Fix reading of SMS backups without text (bug #963).
+[-] * Send message even if SendingTimeOut is null (bug #977).
     
 20090813 - 1.25.91
 
